Add PKCS#11 hardware signing support
